Updated README.md to ensure goals of the website are well defined and altered Upcoming Events to ensure maps are responsive on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,7 @@ header {
     margin: 0px;
     padding: 0px;
     border: 0px;
-}
-
-/* Body */
-body {
-    font-family: 'Merriweather Sans', sans-serif;
-    color: #0590AEff;
+    background-color: #F8F6F0ff;
 }
 
 #logo {
@@ -54,6 +49,13 @@ body {
     border-bottom: 1px solid #2A4D76ff;
 }
 
+/* Body */
+body {
+    font-family: 'Merriweather Sans', sans-serif;
+    color: #0590AEff;
+}
+
+
 /*colours*/
 
 .bg-color-contact {
@@ -67,6 +69,7 @@ body {
     width: 100%;
     background: url(../images/HeroImageHarbour.webp) no-repeat center center;
     background-size: cover;
+    background-position: center;
 
     animation-name: hero-zoom;
     animation-duration: 5s;
@@ -168,7 +171,7 @@ body {
 
 .aberaeron-container {
     width: 100%;
-    height: 600px
+    height: 600px;
     margin-bottom: 10px;
 }
 
@@ -202,6 +205,7 @@ button[type="submit"] {
     /* Footer */
 footer {
     height: 150px;
+    background-color: #F8F6F0ff;
 }
 
 .social-networks {
@@ -295,7 +299,6 @@ footer {
         width: 400px;
         height: 300px;
         border: 0;
-        position: 
     }
 }
 
@@ -304,6 +307,7 @@ footer {
         width: 300px;
         height: 200px;
         border: 0;
+        
     }
 }
 
@@ -312,13 +316,13 @@ footer {
 @media screen and (max-width: 768px) {
     .aberaeron-container {
         width: 100%;
-        height: 450px
+        height: 450px;
     }
 }
 
 @media screen and (max-width: 480px) {
     .aberaeron-container {
         width: 100%;
-        height: 300px
+        height: 300px;
     }
 }
